<resources>

    <string name="app_name">Quotation</string>
    <string name="ad_unit_id">ca-app-pub-4867342099234785/3519008168</string>

    <!-- Citat activity layout-->
    <string name="citat_number_def_text" translatable="false">999</string>
    <string name="button_prev_descr" translatable="false">button_prev</string>
    <string name="button_next_descr" translatable="false">button_next</string>
    <string name="button_bush_descr" translatable="false">button_bush</string>
    <string name="button_share_descr" translatable="false">button_share</string>
    <string name="button_random_descr" translatable="false">button_random</string>
    <string name="button_add_favorites_descr" translatable="false">button_add_favorites</string>
    <string name="border_descr" translatable="false">border_descr</string>
    <string name="citat_text_def">
        Citat text.\n
        Citat text. Citat text.\n
        Citat text. Citat text. Citat text.\n
        Citat text. Citat text. Citat text. Citat text. Citat text.
    </string>
    <string name="auth_text_def">Auth text.</string>
    <string name="have_not_favorite">Have not selected favorite quotes</string>

    <!-- Menu items text -->
    <string name="menu_text_send">Share</string>
    <string name="menu_text_favorites">Favorite</string>
    <string name="menu_text_about">About</string>
    <string name="menu_text_exit">Exit</string>
    <string name="sub_menu_text_auth">Authors</string>
    <string name="sub_menu_text_site">Site</string>
    <string name="sub_menu_text_prod">Products</string>

    <!-- Toast messages -->
    <string name="toast_message_send">Choose how to share</string>
    <string name="toast_message_favorites">Favorite</string>
    <string name="toast_message_online">Online</string>
    <string name="toast_message_auth">AXL, DEN_K</string>
    <string name="toast_message_site">SciCat.ru</string>
    <string name="toast_message_prod">This first:)</string>
    <string name="toast_message_exit">Thank you for your attention;)</string>

    <!-- Share -->
    <string name="share_mesage">Share by app</string>
    <string name="share_way">Share by</string>

</resources>
