<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13">

        <ImageView
            android:id="@+id/button_prew"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:src="@drawable/button_prew"
            android:contentDescription="@string/button_prev_descr" />

        <TextView
            android:id="@+id/citat_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/citat_number_def_text"
            android:textColor="@color/citat_number_text_color"
            android:textSize="55sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:src="@drawable/button_next"
            android:contentDescription="@string/button_prev_descr" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60">

        <TextView
            android:id="@+id/citat_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="@dimen/citat_text_padding"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:text="@string/citat_text_def"
            android:textIsSelectable="true"
            android:textSize="@dimen/citat_text_size"
            android:layout_weight="79" />

        <ImageView
            android:id="@+id/border"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:src="@drawable/border"
            android:layout_weight="1"
            android:contentDescription="@string/border_descr"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20">

            <TextView
                android:id="@+id/auth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/auth_text_def"
                android:textIsSelectable="true"
                android:textSize="@dimen/auth_text_size"
                android:textStyle="italic"
                android:maxLines="1"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/auth_text_margin_left"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/auth_text_margin_top"
                android:layout_marginBottom="10dp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="27">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/button_bush"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/button_bash"
                    android:contentDescription="@string/button_bush_descr"/>

                <ImageView
                    android:id="@+id/button_share"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/button_share"
                    android:contentDescription="@string/button_share_descr"/>

                <ImageView
                    android:id="@+id/button_random"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/button_rand"
                    android:contentDescription="@string/button_random_descr"/>

                <ImageView
                    android:id="@+id/button_add_favorites"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/button_favorite_add"
                    android:contentDescription="@string/button_add_favorites_descr"/>
            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/ad_unit_id"
                android:layout_gravity="center_horizontal">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>